--- a/assets/custom.css
+++ b/assets/custom.css
@@ -14,9 +14,9 @@ body {
 .nav-link-custom {
     display: left;
     justify-content: left;
-    align-items: center;
+    align-items: right;
     text-align: left;
-    min-width: 200px; /* Sie können diese Breite anpassen, um zu Ihren Bedürfnissen zu passen */
+    min-width: 150px; /* Sie können diese Breite anpassen, um zu Ihren Bedürfnissen zu passen */
 }
 
 
